--- a/src/components/Product/product.css
+++ b/src/components/Product/product.css
@@ -1,66 +1,76 @@
-.product{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    margin: 10px;
-    padding: 20px;
-    width: 100%;
-    max-height: 400px;
-    min-width: 100px;
-    background-color: white;
-    z-index: 1;
+.product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 10px;
+  padding: 20px;
+  width: 100%;
+  max-height: 400px;
+  min-width: 100px;
+  background-color: white;
+  z-index: 1;
 }
 
-.product > img{
-    max-height: 200px;
-    width: 100%;
-    object-fit: contain;
-    margin-bottom: 15px;
+.product>img {
+  max-height: 200px;
+  width: 100%;
+  object-fit: contain;
+  margin-bottom: 15px;
+  transition: all 0.8s;
 
 }
+
+.product>img:hover {
+  transform: translateY(5px) translateX(5px) scale(1.1);
+}
+
 .product__info {
-    height: 100px;
-    width: 100%;
-    margin-bottom :15px;
+  height: 100px;
+  width: 100%;
+  margin-bottom: 15px;
 }
+
 .product__price {
-    margin-top: 5px;
+  margin-top: 5px;
 }
+
 .product__rating {
-    display: flex;
+  display: flex;
 }
-.product > button{
-    background: #f0c14b;
-    border: 1px solid;
-    margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
-    color: #111;
+
+.product>button {
+  background: #f0c14b;
+  border: 1px solid;
+  margin-top: 10px;
+  border-color: #a88734 #9c7e31 #846a29;
+  color: #111;
 }
-.product > button:hover {
-    background: #d7ab3a;
+
+.product>button:hover {
+  background: #d7ab3a;
 }
 
 .price {
-    margin-top: 5px;
-  }
-  
-  .info {
-    height: 100px;
-    margin-bottom: 15px;
-  }
-  
-  .rating {
-    display: flex;
-  }
-  
-  .title {
-    color: black;
-    font-size: 20px;
-    font-weight: 600;
-    text-decoration: none;
-  }
-  
-  i {
-    vertical-align: middle;
-  }
+  margin-top: 5px;
+}
+
+.info {
+  height: 100px;
+  margin-bottom: 15px;
+}
+
+.rating {
+  display: flex;
+}
+
+.title {
+  color: black;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+i {
+  vertical-align: middle;
+}
